--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,10 +1,7 @@
 name: Android CI
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
   build:
@@ -20,7 +17,17 @@ jobs:
         distribution: 'temurin'
         cache: gradle
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+    - name: Install Dependencies
+      run: yarn install
+      
+    - name: Build with Yarn
+      env:
+        GOOGLE_APP_ID: ${{ secrets.GOOGLE_APP_ID }}
+        GCM_DEFAULT_SENDER_ID: ${{ secrets.GCM_DEFAULT_SENDER_ID }}
+      run: yarn build:android-nokeys
+
+    - name: Upload APK
+      uses: actions/upload-artifact@v3
+      with:
+        name: android-build
+        path: android/app/build/outputs/apk/release/*.apk
