--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -149,6 +149,8 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 231
         versionName "27.231"
+        resValue "string", "google_app_id", "\"${System.getenv("GOOGLE_APP_ID") ?: "1:835904834568:android:19a01c6476449260"}\""
+        resValue "string", "gcm_defaultSenderId", "\"${System.getenv("GCM_DEFAULT_SENDER_ID") ?: "835904834568"}\""
     }
     signingConfigs {
         // The RN v0.60 template app suggests configuring a debug
