--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -178,7 +178,9 @@ android {
             reset()
             enable true // Build a separate APK for each ABI.
             universalApk false  // If true, also generate a universal APK
-            include (*reactNativeArchitectures())
+            //AT: We want only one architecture, so commenting this line include (*reactNativeArchitectures())
+            include "arm64-v8a" // Only include the arm64-v8a architecture.
+                
         }
     }
     buildTypes {
